--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -8,12 +8,12 @@
 @tailwind components;
 @tailwind utilities;
 
-.container {
+/* .container {
   width: 94%;
   max-width: 1660px;
   margin-left: auto;
   margin-right: auto;
-}
+} */
 
 @layer utilities {
   /* Ubuntu */
