--- a/frontend/src/styles/reset.css
+++ b/frontend/src/styles/reset.css
@@ -8,6 +8,7 @@
 body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
+  overflow-x: hidden;
 }
 img, picture, video, canvas, svg {
   display: block;
