frontend: works.tsx (responsive) tasarımı yapıldı.

--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -8,12 +8,7 @@
 @tailwind components;
 @tailwind utilities;
 
-/* .container {
-  width: 94%;
-  max-width: 1660px;
-  margin-left: auto;
-  margin-right: auto;
-} */
+@import url('../../src/components/works/styles.module.css');
 
 @layer utilities {
   /* Ubuntu */
