--- a/frontend/src/app/(admin)/admin/styles.module.css
+++ b/frontend/src/app/(admin)/admin/styles.module.css
@@ -2,27 +2,54 @@
   width: 100%;
   height: 100%;
   display: grid;
-  grid-template-columns: minmax(250px, 350px) 1fr;
+  grid-template-columns: minmax(200px, 300px) 1fr;
   grid-template-rows: 80px auto 72px;
+  transition: all 0.2s ease-in;
 }
 .adminHeader {
-  grid-column: 1 / 3;
+  grid-column: 2 / 3;
   grid-row: 1 / 2;
 }
 .adminAside {
   grid-column: 1 / 2;
-  grid-row: 2 / 3;
+  grid-row: 1 / 4;
 }
 .adminMain {
   grid-column: 2 / 3;
-  grid-row: 2 / 3;
+  grid-row: 2 / 4;
 }
 .adminFooter {
-  grid-column: 1 / 3;
+  grid-column: 2 / 3;
   grid-row: 3 / 4;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1280px) {
+  .adminLayout {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: minmax(40px, 60px) 1fr;
+    grid-template-rows: 80px auto 72px;
+    transition: all 0.2s ease-in;
+  }
+  .adminHeader {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+  }
+  .adminAside {
+    grid-column: 1 / 2;
+    grid-row: 1 / 4;
+  }
+  .adminMain {
+    grid-column: 2 / 3;
+    grid-row: 2 / 4;
+  }
+  .adminFooter {
+    grid-column: 2 / 3;
+    grid-row: 3 / 4;
+  }
+}
+@media screen and (max-width: 768px) {
   .adminLayout {
     width: 100%;
     height: 100%;
