--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -44,3 +44,31 @@ html {
 .ProseMirror-focused {
   outline: none !important;
 }
+
+blockquote {
+  padding: 1rem 2.5rem;
+  margin: 1.5em 0;
+  border-left: 5px solid #4caf50;
+  background: #f0f4f8;
+  color: #333;
+  position: relative;
+}
+
+blockquote::before {
+  content: "\201C";
+  font-size: 4em;
+  color: #4caf50;
+  position: absolute;
+  top: -10px;
+  left: 10px;
+}
+
+code {
+  display: inline-block;
+  background-color: #1a1e23;
+  color: #75b4d4;
+  padding: 0.4rem 0.5rem;
+  margin: 0.2rem 0.2rem;
+  border-radius: 5px;
+  font-size: 14px;
+}
