--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -59,16 +59,16 @@ blockquote::before {
   left: 10px;
 }
 
-/* code {
-  display: inline-block;
+code {
+  display: block;
   background-color: #1a1e23;
-  color: #75b4d4;
-  padding: 1rem;
-  border-radius: 5px;
-  font-family: "Fira Code", monospace; 
+  color: #57c0d7;
   overflow-x: auto;
-  font-size: 14px;
-} */
+  margin: 1.5rem 0;
+  padding: 1rem 1.8rem;
+  border-radius: 0.5rem;
+  font-family: "JetBrainsMono", monospace;
+}
 
 .tiptap pre {
   display: block;
