--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -42,20 +42,20 @@ html {
 }
 
 blockquote {
+  position: relative;
   padding: 1rem 2.5rem;
   margin: 1.5em 0;
-  border-left: 5px solid #4caf50;
-  background: #f0f4f8;
-  color: #333;
-  position: relative;
+  border-left: 5px solid #12f7d6;
+  background: #1a1e231a;
+  color: #ffffff;
 }
 
 blockquote::before {
   content: "\201C";
-  font-size: 4em;
-  color: #4caf50;
   position: absolute;
-  top: -10px;
+  font-size: 4em;
+  color: #12f7d6;
+  top: 20px;
   left: 10px;
 }
 
@@ -100,4 +100,17 @@ code {
 .skills-content {
   background: rgb(0, 96, 140);
   background: linear-gradient(10deg, rgba(0, 96, 140, 1) 50%, rgba(41, 47, 54, 1) 78%);
+}
+
+#blog-content h2,
+h3,
+h4,
+h5 {
+  color: #12f7d6 !important;
+  padding-top: 3rem;
+  padding-bottom: 2rem;
+}
+
+#blog-content p {
+  line-height: 2.1rem;
 }
